--- a/TicTacToe/tests/CMakeLists.txt
+++ b/TicTacToe/tests/CMakeLists.txt
@@ -1,7 +1,3 @@
-cmake_minimum_required(VERSION 3.16)
-
-project(TicTacToeTests)
-
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_AUTOMOC ON)
@@ -9,68 +5,48 @@ set(CMAKE_AUTOMOC ON)
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Test)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Test)
 
-include(GoogleTest)
-
-set(gtest_disable_patching ON)
-set(gtest_force_shared_crt ON)
-set(test_gamelogic_SOURCES
-    sources/test_gamelogic.cpp
-    ../src/sources/gamelogic.cpp
-)
-
-qt5_wrap_cpp(test_gamelogic_MOC_SOURCES
-    ../src/headers/gamelogic.h
-)
-
-add_executable(test_gamelogic
-    ${test_gamelogic_SOURCES}
-    ${test_gamelogic_MOC_SOURCES}
-)
-
-target_include_directories(test_gamelogic
-    PRIVATE
-    ${CMAKE_CURRENT_SOURCE_DIR}/headers
-    ${CMAKE_CURRENT_SOURCE_DIR}/../src/headers
+set(INCLUDE_DIRS
+    ${CMAKE_CURRENT_SOURCE_DIR}/../src
     ${CMAKE_CURRENT_BINARY_DIR}
 )
 
+add_executable(test_gamelogic
+    test_gamelogic.cpp
+    ../src/gamelogic.cpp
+)
+
+target_include_directories(test_gamelogic PRIVATE ${INCLUDE_DIRS})
 target_link_libraries(test_gamelogic
     Qt${QT_VERSION_MAJOR}::Test
     Qt${QT_VERSION_MAJOR}::Core
 )
 
-set(test_gameboard_SOURCES
-    sources/test_gameboard.cpp
-    ../src/sources/gameboard.cpp
-    ../src/sources/gamelogic.cpp
-)
-
-qt5_wrap_cpp(test_gameboard_MOC_SOURCES
-    ../src/headers/gamelogic.h
-    ../src/headers/gameboard.h
-)
-
 add_executable(test_gameboard
-    ${test_gameboard_SOURCES}
-    ${test_gameboard_MOC_SOURCES}
+    test_gameboard.cpp
+    ../src/gameboard.cpp
+    ../src/gamelogic.cpp
 )
 
-target_include_directories(test_gameboard
-    PRIVATE
-    ${CMAKE_CURRENT_SOURCE_DIR}/headers
-    ${CMAKE_CURRENT_SOURCE_DIR}/../src/headers
-    ${CMAKE_CURRENT_BINARY_DIR}
-)
-
+target_include_directories(test_gameboard PRIVATE ${INCLUDE_DIRS})
 target_link_libraries(test_gameboard
     Qt${QT_VERSION_MAJOR}::Test
     Qt${QT_VERSION_MAJOR}::Widgets
     Qt${QT_VERSION_MAJOR}::Core
+    Qt${QT_VERSION_MAJOR}::Gui
 )
 
-if(WIN32)
+if(Qt5_FOUND)
+    add_test(NAME test_gamelogic COMMAND test_gamelogic)
+    add_test(NAME test_gameboard COMMAND test_gameboard)
+endif()
+
+if(WIN32 AND Qt5_FOUND)
     get_target_property(QtCore_location Qt5::Core LOCATION)
     get_filename_component(QT_DLL_DIR ${QtCore_location} DIRECTORY)
+
+    get_target_property(QtGui_location Qt5::Gui LOCATION)
+    get_filename_component(QT_PLUGINS_DIR ${QtGui_location} DIRECTORY)
+    set(QT_PLUGINS_DIR "${QT_PLUGINS_DIR}/../plugins")
 
     add_custom_command(TARGET test_gamelogic POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy_if_different
@@ -87,18 +63,18 @@ if(WIN32)
             "${QT_DLL_DIR}/Qt5Gui.dll"
             $<TARGET_FILE_DIR:test_gameboard>
     )
+
+    add_custom_command(TARGET test_gameboard POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E make_directory
+            "$<TARGET_FILE_DIR:test_gameboard>/platforms"
+    )
+
+    add_custom_command(TARGET test_gameboard POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_if_different
+            "${QT_PLUGINS_DIR}/platforms/qwindows.dll"
+            "$<TARGET_FILE_DIR:test_gameboard>/platforms/"
+    )
 endif()
 
 target_compile_options(test_gamelogic PRIVATE -w)
 target_compile_options(test_gameboard PRIVATE -w)
-
-option(GTEST_DISCOVER_TESTS "Use gtest_discover_tests" OFF)
-
-if(GTEST_DISCOVER_TESTS)
-    gtest_discover_tests(test_gamelogic)
-    gtest_discover_tests(test_gameboard)
-else()
-    add_test(NAME test_gamelogic COMMAND test_gamelogic)
-    add_test(NAME test_gameboard COMMAND test_gameboard)
-endif()
-
